--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:postgresql://ep-solitary-surf-a1r9b4eo.ap-southeast-1
 spring.datasource.username=user_crud
 spring.datasource.password=jASfXq7Kgu2c
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+server.port=80
